Thu Jan  2 21:03:25 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* freetds.spec.in: update description
	* include/tdsodbc.h src/odbc/convert_sql2string.c:
	* src/odbc/odbc.c src/odbc/odbc_util.c:
	* src/odbc/prepare_query.c src/odbc/sql2tds.c:
	- fix a bug deferencing a pointer
	- declare param_lenbind as SQLINTEGER*

Thu Jan  2 12:23:53 EST 2003	JK Lowden <jklowden@schemamania.org>
	* src/apps/tsql.c print informational messages
	* src/tds/token.c tds_process_msg: convert if-else to switch

Wed Jan  1 20:53:32 EST 2003	JK Lowden <jklowden@schemamania.org>
	* include/cspublic.h  changed values of datafmt.status bitmasks
	* src/ctlib/ct.c  minor bugs
	* src/tds/token.c  set TDS_CMD_DONE for TDS_NO_MORE_RESULTS

Wed Jan  1 17:59:12 EST 2003	JK Lowden <jklowden@schemamania.org>
	* src/ctlib/unittests/t0002.c  added test for return status
	
Tue Dec 31 17:38:16 EST 2002	JK Lowden <jklowden@schemamania.org>
	* src/tds/util.c	re-indented variable declarations.  
	* src/ctlib/ct.c	ct_res_info(): Added log entries.

Tue Dec 31 16:07:32 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* include/tds.h: add TDSRESULTINFO to Doxygen
	* src/dblib/rpc.c: update log note
	* src/dblib/unittests/rpc.c: exit if dbrpcsend failed
	* src/tds/token.c: small optimization

Tue Dec 31 12:11:19 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/token.c:
	- rename tds_process_col_info to tds_process_col_fmt
	- parse COLFMT token into default processing

Mon Dec 30 16:27:00 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* freetds.spec.in: applied patch from David Hollis

Sat Dec 28 21:22:23 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/convert.c src/tds/token.c:
	- improve documentation

Sat Dec 28 20:50:11 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* include/tds.h src/odbc/odbc.c src/odbc/odbc_util.c:
	* src/odbc/prepare_query.c src/tds/config.c src/tds/locale.c:
	* src/tds/mem.c:
	- rename TDSLOCINFO with TDSLOCALE